force-app/main/default/objects/Tax_Classification_Code__mdt/Tax_Classification_Code__mdt.object-meta.xml
<CustomObject>
    <description>Stores the Tax Classification Code assigned to Opportunity VAT Treatments and Engagement VAT Treatments.
Tax Classification Code is determined based on specified Legal Entity &apos;Entity Code&apos; and VAT Treatment.</description>
    <label>Tax Classification Code</label>
    <pluralLabel>Tax Classification Codes</pluralLabel>
</CustomObject>