force-app/main/default/objects/Tax_Classification_Code__mdt/fields/ERP_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>ERP_Business_Unit__c</fullName>
    <label>ERP Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>