force-app/main/default/objects/Tax_Classification_Code__mdt/fields/ERP_Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>ERP_Entity_Code__c</fullName>
    <label>ERP Entity Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>