force-app/main/default/objects/Tax_Classification_Code__mdt/fields/Tax_Classification_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Classification_Code__c</fullName>
    <label>Tax Classification Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>