force-app/main/default/objects/Tax_Classification_Code__mdt/fields/Treatment__c.field-meta.xml
<CustomField>
    <fullName>Treatment__c</fullName>
    <label>Treatment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>