force-app/main/default/objects/Tax_Classification_Code__mdt/listViews/All_Tax_Classification_Codes.listView-meta.xml
<ListView>
    <fullName>All_Tax_Classification_Codes</fullName>
    <columns>MasterLabel</columns>
    <columns>Legal_Entity_Name__c</columns>
    <columns>ERP_Entity_Code__c</columns>
    <columns>Treatment__c</columns>
    <columns>Tax_Classification_Code__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>All Tax Classification Codes</label>
</ListView>